# CustomDialog2

./: .gitignore  build.gradle  local.properties.bak  settings.gradle
androidzxing/: build.gradle
app/: CMakeLists.txt  build.gradle  build.gradle.bak
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Android.mk  AndroidLog.h  Application.mk  androidUtil.cpp  androidUtil.h  changeImg.cpp  com_zjy_js_customdialog_JniTest.h  fuliyeTest.cpp  fuliyeTest.h  main.cpp  opencvImgUtils.cpp
app/src/main/cpp/opencv2/core/: cvstd.hpp  mat.inl.hpp  utility.hpp
app/src/main/java/com/zjy/js/customdialog/: AddPrintersActivity.java  AdvancedPrintOptionsActivity.java  BaseToolBarActivity.java  FilePicker.java  JniTest.java  MainActivity.java  MyApp.java  MyPrintDiscoverySession.java  MyPrintService.java  MyScrollChild.java  MyScrolling.java  NetPrinter.java  PrinterCMD.java  QQBrowserTabActivity.java  ServiceMQTT.java  SettingsActivity.java  SpinnerAdapter.java
app/src/main/java/com/zjy/js/customdialog/activity/: AddPrintersActivity.java  AdvancedPrintOptionsActivity.java  BaseToolBarActivity.java  FontSizeTestActivity.java  MainActivity.java  MySingleton.java  OpenCvImgActivity.java  QQBrowserTabActivity.java  SettingsActivity.java  ToolbarTestActivity.java
app/src/main/java/com/zjy/js/customdialog/image/: HandleImgUtils.java  ImgRotate.java  MyImgUtil.java  OpenCvImageUtils.java
app/src/main/java/com/zjy/js/customdialog/mqtt/: ServiceMQTT.java
app/src/main/java/com/zjy/js/customdialog/opencvutils/: ExTest.java  ImageUtils.java  JavaOpencvUtil.java  ZjyOpencvUtil.java
app/src/main/java/com/zjy/js/customdialog/printer/: MyPrintDiscoverySession.java  MyPrintService.java  NetPrinter.java  PrinterCMD.java
app/src/main/java/com/zjy/js/customdialog/view/: BitmapUtil.java  MeasureFontHeightTv.java  MyScrollChild.java  MyScrolling.java  ScrollableTabView.java
app/src/main/java/com/zjy/js/customdialog/zhy/bean/: ImageFloder.java
app/src/main/java/com/zjy/js/customdialog/zhy/imageloader/: ListImageDirPopupWindow.java  MyAdapter.java  PickPicActivity.java
app/src/main/java/com/zjy/js/customdialog/zhy/utils/: BasePopupWindowForListView.java  CommonAdapter.java  ImageLoader.java  ViewHolder.java
app/src/main/java/printer/activity/: CameraActivity.java  CameraFocusCallback.java  PickPicPrintingActivity.java  SFActivity.java  SetYundanActivity.java
app/src/main/java/printer/adapter/: ImageGvAdapter.java
app/src/main/jni/: Android.mk  Application.mk
app/src/main/res/anim/: mdialog_anim.xml
app/src/main/res/layout/: activity_add_printers.xml  activity_advanced_print_options.xml  activity_base_tool_bar.xml  activity_camera.xml  activity_font_size_test.xml  activity_main.xml  activity_open_cv_img.xml  activity_qqbrowser_tab.xml  activity_setting.xml  activity_toolbar_test.xml  item_fonttest.xml  list_dir_item.xml  loading_dialog.xml
app/src/main/res/values/: attrs.xml  styles.xml
app/src/main/res/values-v21/: styles.xml
app/src/main/res/xml/: printservice.xml
mqttlib/: build.gradle
openCVLibrary342/: build.gradle
openCVimagemanipulations/: build.gradle
opencv/: build.gradle
sdk/: build.gradle  local.properties
(+45 files in other folders)
